8.Kubernetes/5.Exemple deploiment mysql/mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  type: NodePort
  ports:
  - port: 3306
    targetPort: 3306
    nodePort: 30006  # Specify your desired NodePort value
  selector:
    app: mysql
